// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button render correctly 1`] = `
<button
  class="ty-ripple ty-btn ty-btn__contained ty-btn__contained--default"
>
  <span
    class="ty-btn__wrapper"
  >
    Follow
  </span>
  <span
    class="ty-ripple__wrapper"
  />
</button>
`;

exports[`Button render correctly 2`] = `
<button
  class="ty-ripple ty-btn ty-btn__contained ty-btn__contained--default ty-btn--small"
>
  <span
    class="ty-btn__wrapper"
  >
    Follow
  </span>
  <span
    class="ty-ripple__wrapper"
  />
</button>
`;

exports[`Button render correctly 3`] = `
<button
  class="ty-ripple ty-btn ty-btn__circle ty-btn__circle--default"
>
  <span
    class="ty-btn__wrapper"
  >
    Follow
  </span>
  <span
    class="ty-ripple__wrapper"
  />
</button>
`;

exports[`Button render correctly 4`] = `
<button
  class="ty-ripple ty-btn ty-btn__contained ty-btn__contained--success"
>
  <span
    class="ty-btn__wrapper"
  >
    Follow
  </span>
  <span
    class="ty-ripple__wrapper"
  />
</button>
`;

exports[`Button should has click ripple effect 1`] = `
<button
  class="ty-ripple ty-btn ty-btn__contained ty-btn__contained--default"
>
  <span
    class="ty-btn__wrapper"
  >
    button
  </span>
  <span
    class="ty-ripple__wrapper"
  />
</button>
`;

exports[`Button should not render as link button when href is undefined 1`] = `
<button
  class="ty-ripple ty-btn ty-btn__contained ty-btn__contained--default"
>
  <span
    class="ty-btn__wrapper"
  >
    button
  </span>
  <span
    class="ty-ripple__wrapper"
  />
</button>
`;

exports[`Button should support link button 1`] = `
<a
  class="ty-ripple ty-btn ty-btn__contained ty-btn__contained--default"
  href="https://github.com/buyou0821/tyche-ui"
  target="_blank"
>
  <span
    class="ty-btn__wrapper"
  >
    link button
  </span>
  <span
    class="ty-ripple__wrapper"
  />
</a>
`;

exports[`Button should support ripple attribute 1`] = `
<button
  class="ty-ripple ty-btn ty-btn__contained ty-btn__contained--default"
>
  <span
    class="ty-btn__wrapper"
  >
    button
  </span>
</button>
`;
